Restore regression spotted by miker (thanks!)

--- a/Open-ILS/xul/staff_client/server/admin/copy_locations.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/copy_locations.xhtml
@@ -129,6 +129,8 @@
 				&staff.server.admin.copy_locations.editor.delete.confirm;
 			</span>
 			<table>
+                <tbody> 
+                    <tr id='cl_edit' class='insert_row'>
 						<td><input name='cl_edit_name' type='text'> </input></td>
 						<td name='cl_edit_owner'></td>
 						<td>
